Fix layout issues across tabs

--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -1,3 +1,7 @@
+.home {
+  flex-flow: column;
+}
+
 .home__headings {
   flex: 1;
   display: flex;
