--- a/src/pages/menu/index.css
+++ b/src/pages/menu/index.css
@@ -1,3 +1,7 @@
+.menu {
+  flex-flow: column;
+}
+
 .menu__wrapper {
   display: flex;
   flex-flow: row;
