--- a/src/style.css
+++ b/src/style.css
@@ -59,7 +59,6 @@ nav {
 #content {
   flex: 1;
   display: flex;
-  flex-flow: column;
   justify-content: center;
   padding: 0 32px;
 
@@ -68,17 +67,17 @@ nav {
     margin: auto;
     padding: 0;
   }
+}
 
-  & h1 {
-    margin: 0;
-    font-size: 72px;
-    line-height: 72px;
-    color: #BE1E2E;
-  }
+h1 {
+  margin: 0;
+  font-size: 72px;
+  line-height: 72px;
+  color: #BE1E2E;
+}
 
-  & h2 {
-    margin: 0;
-    font-size: 36px;
-    line-height: 72px;
-  }
+h2 {
+  margin: 0;
+  font-size: 36px;
+  line-height: 72px;
 }
